--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/vis.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vis-network.min.css">
     <link rel="stylesheet" href="assets/css/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.css" >
     <script src="https://d3js.org/d3.v3.min.js"></script>
