--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/vis.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/vis-network.min.css">
-    <link rel="stylesheet" href="assets/css/w3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.css" >
-    <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/vis-timeline-graph2d.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/nv.d3.min.css">
+    <script src="assets/js/d3.v3.min.js"></script>
+    <script src="assets/js/nv.d3.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.js"></script>
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
 
 
 </head>
