--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <script src="assets/js/nv.d3.min.js"></script>
 
     <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
 
 
 </head>
