--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,20 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/simple-line-icons.css" rel="stylesheet">
 
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vis.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vis-network.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vis-timeline-graph2d.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/nv.d3.min.css">
+    <script src="assets/js/d3.v3.min.js"></script>
+    <script src="assets/js/nv.d3.min.js"></script>
+
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
+
+
 </head>
 
 <!-- BODY options, add following classes to body to change options
