--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,12 @@
     <link rel="stylesheet" type="text/css" href="assets/css/vis.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/vis-network.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/vis-timeline-graph2d.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/w3.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/nv.d3.min.css">
     <script src="assets/js/d3.v3.min.js"></script>
-    <script src="assets/js/nv.d3.min.js"></script>
 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.5/nv.d3.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.5/nv.d3.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
