--- a/src/index.html
+++ b/src/index.html
@@ -2,37 +2,34 @@
 <html>
 
 <head>
-    <base href="./">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="PICASO">
-    <meta name="author" content="PICASO">
-    <meta name="keyword" content="">
-    <link rel="shortcut icon" href="assets/img/favicon.png">
+  <base href="./">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta name="keyword" content="">
+  <link rel="shortcut icon" href="assets/img/favicon.png">
 
-    <title>PICASO Clinican Dashboard</title>
+  <title>PICASO Clinician dashboard</title>
+  <!-- Icons -->
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/css/simple-line-icons.css" rel="stylesheet">
 
-    <!-- Icons -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/simple-line-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/vis.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/vis-network.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/vis-timeline-graph2d.min.css">
+  <script src="assets/js/d3.v3.min.js"></script>
 
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/vis.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/vis-network.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/vis-timeline-graph2d.min.css">
-    <script src="assets/js/d3.v3.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.5/nv.d3.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.5/nv.d3.min.js"></script>
 
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.5/nv.d3.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.5/nv.d3.min.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -48,7 +45,6 @@
 -->
 
 <body class="navbar-fixed sidebar-nav fixed-nav">
-    <!-- App Loading... -->
-</body>
 
+</body>
 </html>
