cards further condensed.

--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,25 @@
   <link rel="shortcut icon" href="assets/img/favicon.png">
 
   <title>PICASO Clinician dashboard</title>
-  <!-- Icons -->
+
+
+  <!-- Styles -->
   <link href="assets/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/css/simple-line-icons.css" rel="stylesheet">
-
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="assets/css/vis.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/vis-network.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/vis-timeline-graph2d.min.css">
-  <script src="assets/js/d3.v3.min.js"></script>
-
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
   <link rel="stylesheet" href="assets/css/nv.d3.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="assets/js/d3.v3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.5/nv.d3.min.js"></script>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
