Further css improvements, chart types switches added.

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link href="assets/css/simple-line-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="assets/css/w3.css">
 
 
 
